tests/ActsFor5.jif
class ActsFor5
{
    public void p() {
        int{Bob:} x = 0;
        int{Alice:} y = 0;

        actsFor(Alice, Bob) {
            y = x; // replace the owner with a principal that acts for it
        }
        else {
            // y = x; // error
            // x = y; // error
        }
    }
}
